--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,8 @@
 # ==================================
 # Base Configuration (အခြေခံ Configuration)
 # ==================================
-name = "enkp"  # wrangler.jsonc က name ကို ယူသုံးထားပါတယ်။
-main = "vless-proxy-worker.js"
+name = "envpn"  # wrangler.jsonc က name ကို ယူသုံးထားပါတယ်။
+main = "en-worker.js"
 compatibility_date = "2025-11-09"
 
 # ==================================
@@ -10,4 +10,4 @@ compatibility_date = "2025-11-09"
 # ==================================
 [[kv_namespaces]]
 binding = "LICENSES"
-id = "6a34b751daf34705bf1c95f05c31ec6b"
+id = "d13dc3b292084977b99cfbc18634c8b1"
